--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "WeightTracker",
   "version": "1.0.0",
-  "description":
-    "Simple weight tracking app with reporting of averages and changes at 1 week intervals",
+  "description": "Simple weight tracking app with reporting of averages and changes at 1 week intervals",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -19,11 +19,14 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "babel-plugin-transform-class-properties": "^6.24.1"
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest --watch"
+  },
+  "dependencies": {
+    "favicons-webpack-plugin": "^0.0.7"
   }
 }
