--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
