--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "WeightTracker",
   "version": "1.0.0",
-  "description": "Simple weight tracking app with reporting of averages and changes at 1 week intervals",
+  "description":
+    "Simple weight tracking app with reporting of averages and changes at 1 week intervals",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
@@ -19,7 +21,9 @@
     "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.1.4",
+    "jest-webpack": "^0.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "style-loader": "^0.19.1",
